[package]
name = "sp-rs"
version = "0.1.0"
authors = ["xthexder", "nauscar"]
edition = "2021"
license-file = "../../LICENSE-MPL-2.0"

[features]
default = ["api", "wasm", "window"]
api = []
wasm = ["dep:wasmer", "dep:static_assertions"]
window = ["dep:vulkano", "dep:winit"]

[dependencies]
cxx = "1.0"
log = "0.4"
static_assertions = { version = "1.1", optional = true }
vulkano = { git = "https://github.com/xthexder/vulkano.git", optional = true }
wasmer = { version = "2.1", optional = true }
winit = { version = "0.29.1-beta", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = { version = "0.5", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.1-beta", optional = true, default-features = false, features = [
    "android-native-activity",
] }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
